--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
             </div>
         </div>
         <script src="js/app.js" async defer></script>
+        <!-- <script src="js/custom.js" type="text/javascript"></script> -->
     </body>
 </html>
